# server

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  backend.dockerfile  docker-compose.yaml  frontend.dockerfile  public.dockerfile
.fleet/: run.json
backend/: Cargo.toml
backend/api/: Cargo.toml
backend/api/src/: app.rs  lib.rs
backend/api/src/middleware/: check_grove_mod.rs  extract_character.rs  mod.rs
backend/api/src/path/: mod.rs
backend/api/src/routes/: authentication.rs  character.rs  character_housing.rs  crafter.rs  custom_field.rs  event.rs  fighter.rs  free_company.rs  gatherer.rs  grove.rs  licenses.rs  mod.rs  my.rs  support.rs  user.rs
backend/events/: Cargo.toml
backend/events/src/: app.rs
backend/events/src/listener/: nats.rs
backend/events/src/notifier/: event.rs  notifier_state.rs
backend/events/src/sse/: mod.rs
backend/firebase/: Cargo.toml
backend/firebase/src/: app.rs  lib.rs
backend/firebase/src/listener/: mod.rs
backend/mailer/: Cargo.toml
backend/mailer-notifications/: Cargo.toml
backend/mailer-notifications/src/: app.rs
backend/mailer-notifications/src/listener/: mod.rs
backend/mailer/src/: app.rs  lib.rs
backend/mailer/src/listener/: database.rs  nats.rs
backend/mailer/src/mailer/: mod.rs
backend/mailer/src/template/: mod.rs
backend/reminder/: Cargo.toml
backend/reminder/src/: app.rs  lib.rs
backend/reminder/src/worker/: mod.rs
backend/src/: lib.rs
backend/sse/: Cargo.toml
backend/sse/src/: app.rs  lib.rs
backend/sse/src/listener/: nats.rs
backend/sse/src/notifier/: event.rs  event_notifier_state.rs  mod.rs  notification.rs  notifications_notifier_state.rs  notifier_state.rs
backend/sse/src/routes/: mod.rs
backend/sse/src/sse/: mod.rs
common/: Cargo.toml
common/backend/: Cargo.toml
common/backend/actix/: Cargo.toml
common/backend/actix/src/: lib.rs
common/backend/dbal/: Cargo.toml
common/backend/dbal/src/: authentication.rs  character.rs  character_housing.rs  crafter.rs  custom_field.rs  event.rs  fighter.rs  free_company.rs  free_company_housing.rs  gatherer.rs  grove.rs  lib.rs  my.rs  user.rs
common/backend/logging/: Cargo.toml
common/backend/logging/src/: lib.rs
common/backend/mailing/: Cargo.toml
common/backend/mailing/src/: lib.rs
common/backend/message_queue/: Cargo.toml
common/backend/message_queue/src/: lib.rs
common/backend/migration/src/: lib.rs  m20230724_165759_create_table_event.rs  m20230923_090306_add_field_free_company.rs  m20231212_004733_create_table_character_housing.rs  m20231218_111708_update_event_add_private_column.rs  m20240719_211717_remove_email_two_factor.rs  m20240719_224810_assign_groves_to_users_not_users_to_groves.rs  m20240723_200654_add_grove_invite_secret.rs  m20240723_201052_grove_name_none_unique.rs  m20240724_222658_grove_user_add_ban_column.rs  m20240731_233956_user_add_forgot_password_token_column.rs  m20241130_031734_split_crafter_and_gatherer.rs  m20241220_015134_set_gatherer_crafter_seq.rs  m20241229_011028_add_character_column_datacenter.rs  m20250623_205832_mailer_queue.rs  m20250707_203805_times_for_calendar.rs  m20250712_014852_free_company_housing.rs  m20260529_025141_add_event_notifications.rs  m20260531_031336_add_firebase_token.rs
common/backend/notification/: Cargo.toml
common/backend/services/: Cargo.toml
common/backend/services/src/: lib.rs  minio_service.rs  totp_service.rs
common/backend/src/: lib.rs
common/core/: Cargo.toml
common/core/entities/: Cargo.toml
common/core/entities/src/: authentication.rs  character.rs  character_housing.rs  crafter.rs  custom_character_field.rs  dependency.rs  event.rs  event_notification.rs  event_reminder.rs  fighter.rs  firebase_token.rs  free_company.rs  free_company_housing.rs  gatherer.rs  grove.rs  grove_user.rs  lib.rs  mail.rs  user.rs
common/core/error/src/: lib.rs
common/core/macros/: Cargo.toml
common/core/macros/src/: lib.rs
common/core/queueing/: Cargo.toml
common/core/queueing/src/: lib.rs  nats.rs
common/core/src/: lib.rs
common/frontend/: Cargo.toml
common/frontend/api/: Cargo.toml
common/frontend/api/src/: lib.rs
common/frontend/src/: lib.rs
common/frontend/ui/src/: card.rs
frontend/pandas/: Cargo.toml
frontend/pandas-yew/: Cargo.toml  index.html
frontend/pandas-yew/assets/css/: albert-sans.css  app.css  urbanist.css
frontend/pandas-yew/base/: Cargo.toml
frontend/pandas-yew/base/controls/: Cargo.toml
frontend/pandas-yew/base/error/: Cargo.toml
frontend/pandas-yew/base/routing/: Cargo.toml
frontend/pandas-yew/base/src/: lib.rs
frontend/pandas-yew/base/storage/: Cargo.toml
frontend/pandas-yew/sections/: Cargo.toml
frontend/pandas-yew/sections/authentication/: Cargo.toml
frontend/pandas-yew/sections/bamboo/: Cargo.toml
frontend/pandas-yew/sections/final-fantasy/: Cargo.toml
frontend/pandas-yew/sections/groves/: Cargo.toml
frontend/pandas-yew/sections/layout/: Cargo.toml
frontend/pandas-yew/sections/legal/: Cargo.toml
frontend/pandas-yew/sections/licenses/: Cargo.toml
frontend/pandas-yew/sections/my-profile/: Cargo.toml
frontend/pandas-yew/sections/src/: lib.rs
frontend/pandas-yew/sections/support/: Cargo.toml
frontend/pandas-yew/src/: app.rs  lib.rs
frontend/pandas/src/: app.rs  lib.rs  main.rs
frontend/pandas/src/api/: authentication.rs  event.rs  groves.rs  mod.rs  pandas.rs  profile.rs  support.rs
frontend/pandas/src/authentication/: authenticate_user.rs  mod.rs
frontend/pandas/src/bamboo/: calendar.rs  mod.rs  pandas.rs
frontend/pandas/src/components/: calendar.rs  card.rs  mod.rs  pandas.rs
frontend/pandas/style/: _albert-sans.scss  _calendar.scss  _card.scss  _characters.scss  _cosmo-overrides.scss  _custom-fields.scss  _free-companies.scss  _grove.scss  _menu.scss  _profile.scss  _support.scss  _urbanist.scss  main.scss
frontend/public/: Cargo.toml
frontend/public/src/: app.rs  front.rs  legal.rs  lib.rs  main.rs  register.rs  utils.rs
frontend/public/style/: _albert-sans.scss  _body.scss  _menu.scss  _urbanist.scss  main.scss
(+266 files in other folders)
