[package]
name = "bamboo"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bamboo-backend = { path = "backend" }
bamboo-common = { path = "common" }

actix = { workspace = true }
log = { workspace = true }

[[bin]]
path = "src/bin/api.rs"
name = "bamboo-api"

[[bin]]
path = "src/bin/events.rs"
name = "bamboo-events"

[[bin]]
path = "src/bin/mailer.rs"
name = "bamboo-mailer"

[[bin]]
path = "src/bin/migrator.rs"
name = "bamboo-migrator"

[workspace]
members = [
    "common",
    "common/backend",
    "common/backend/actix",
    "common/backend/database",
    "common/backend/dbal",
    "common/backend/logging",
    "common/backend/macros",
    "common/backend/mailing",
    "common/backend/message_queue",
    "common/backend/migration",
    "common/backend/notification",
    "common/backend/response",
    "common/backend/services",
    "common/core",
    "common/core/entities",
    "common/core/error",
    "common/core/macros",
    "common/core/queueing",
    "common/frontend",
    "common/frontend/api",
    "backend",
    "backend/api",
    "backend/events",
    "backend/mailer",
    "frontend",
    "frontend/authentication",
    "frontend/pandas",
    "frontend/public",
]

[workspace.package]
version = "4.0.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
actix = "0.13"
actix-files = "0.6"
actix-web = "4.9"
actix-web-lab = { version = "0.23", features = ["spa"] }
async-nats = "0.39"
base64 = "0.22"
bcrypt = "0.17"
bytes = "1.10"
bytestring = "1.4"
cargo_metadata = "0.19"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", features = ["serde", "unstable-locales"] }
ciborium = "0.2"
color-art = "0.3"
codee = { version = "0.2", features = ["json_serde"] }
console_error_panic_hook = "0.1"
date-range = "0.3"
env_logger = "0.11"
fast_qr = { version = "0.12", features = ["svg"] }
futures = "0.3"
futures-util = "0.3"
getrandom = "0.2"
gloo = "0.11"
gloo-file = "0.3"
hex = "0.4"
html2text = "0.14"
icondata_lu = "0.0"
itertools = "0.14"
leptos = "0.7"
#leptos-cosmo = { path = "../jinya/leptos-cosmo" }
leptos-cosmo = "1.0"
leptos_actix = "0.7"
leptos_meta = "0.7"
leptos_router = "0.7"
leptos-use = "0.15"
lettre = { version = "0.11", features = ["tokio1-rustls-tls", "smtp-transport", "pool", "hostname", "builder"], default-features = false }
log = "0.4"
maud = "0.27"
mrml = { version = "4.0", features = ["async", "parse", "render"] }
parking_lot = "0.12"
pbkdf2 = "0.12"
quote = "1.0"
rand = "0.9"
rust-s3 = "0.35"
sea-orm = { version = "1.1", features = ["with-json", "runtime-actix-rustls", "sqlx-postgres"] }
sea-orm-migration = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
server_fn = { version = "0.7", features = ["multipart"] }
sha2 = "0.10"
strum = "0.26"
strum_macros = "0.26"
syn = "2.0"
tokio = "1.43"
tokio-stream = "0.1"
tokio-util = "0.7"
totp-rs = { version = "5.6", features = ["qr", "gen_secret"] }
uuid = { version = "1.15", features = ["v4"] }
walkdir = "2.5"
wasm-bindgen = "0.2"
web-sys = "0.3"

[profile.web-dev]
inherits = "dev"
# optimization for size (more aggressive)
opt-level = "z"

[profile.web-release]
inherits = "release"
# less code to include in binary
panic = "abort"
# optimization over all codebase (better optimization, slower build)
codegen-units = 1
# optimization for size (more aggressive)
opt-level = "z"
# link time optimization using whole-program analysis
lto = true

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
