[package]
name = "bamboo-backend"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bamboo-backend-api = { path = "api" }
bamboo-backend-events = { path = "events" }
bamboo-backend-mailer = { path = "mailer" }
