[package]
name = "bamboo-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bamboo-common-backend = { path = "backend", optional = true }
bamboo-common-core = { path = "core", optional = true, default-features = false }
bamboo-common-frontend = { path = "frontend", optional = true }

[features]
default = ["core"]

backend = ["dep:bamboo-common-backend", "core", "bamboo-common-core/backend"]
core = ["dep:bamboo-common-core"]
frontend = ["dep:bamboo-common-frontend", "core", "bamboo-common-core/frontend"]