[package]
name = "bamboo-backend-api"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bamboo-common = { path = "../../common", features = ["backend"] }

actix-web = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
date-range = { workspace = true }
fast_qr = { workspace = true }
log = { workspace = true }
maud = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
totp-rs = { workspace = true }

[build-dependencies]
bamboo-common = { path = "../../common", features = ["core", "backend"] }

cargo_metadata = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
