[package]
name = "bamboo-backend-events"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bamboo-common = { path = "../../common", features = ["backend"] }

actix-web = { workspace = true }
actix-web-lab = { workspace = true }
async-nats = { workspace = true }
bytestring = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }