[package]
name = "bamboo-backend-firebase"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bamboo-common = { path = "../../common", features = ["backend"] }

async-nats = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
yup-oauth2 = { workspace = true }