[package]
name = "bamboo-backend-reminder"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bamboo-common = { path = "../../common", features = ["backend"] }

async-nats = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
sea-orm = { workspace = true }
