[package]
name = "bamboo-common-core"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bamboo-common-core-entities = { path = "entities", default-features = false }
bamboo-common-core-error = { path = "error" }
bamboo-common-core-queueing = { path = "queueing" }

[features]
backend = ["bamboo-common-core-entities/backend", "bamboo-common-core-queueing/backend"]
frontend = ["bamboo-common-core-entities/frontend"]