[package]
name = "bamboo-common-frontend"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bamboo-common-core = { path = "../core", features = ["frontend"] }
#bamboo-common-frontend-ui = { path = "ui" }
bamboo-common-frontend-api = { path = "api" }
