[package]
name = "bamboo-frontend-pandas"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bamboo-common = { path = "../../common" }

actix-files = { workspace = true, optional = true }
actix-web = { workspace = true, optional = true, features = ["macros"] }
codee = { workspace = true }
console_error_panic_hook = { workspace = true }
chrono = { workspace = true }
date-range = { workspace = true }
dotenvy = { workspace = true }
futures-util = { workspace = true }
getrandom = { workspace = true }
gloo-file = { workspace = true, features = ["futures"] }
gloo-utils = { workspace = true }
icondata_lu = { workspace = true }
leptos = { workspace = true }
leptos_actix = { workspace = true, optional = true }
leptos-cosmo = { workspace = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
leptos-use = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
server_fn = { workspace = true }
strum = { workspace = true }
uuid = { workspace = true }
wasm-bindgen = { workspace = true }

[features]
csr = [
    "leptos/csr",
    "leptos-cosmo/csr",
    "bamboo-common/frontend",
    "getrandom/wasm_js"
]
hydrate = [
    "leptos/hydrate",
    "leptos-cosmo/hydrate",
    "bamboo-common/frontend",
    "getrandom/wasm_js"
]
ssr = [
    "dep:actix-files",
    "dep:actix-web",
    "dep:leptos_actix",
    "leptos/ssr",
    "leptos-cosmo/ssr",
    "leptos-cosmo/with-icons",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos-use/ssr",
    "bamboo-common/backend"
]

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "frontend-pandas"
# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/frontend-pandas"
# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"
# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/main.scss"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "assets"
# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "0.0.0.0:4080"
# The port to use for automatic reload monitoring
reload-port = 4081
# The browserlist query used for optimizing the CSS.
browserquery = "defaults"
# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"

lib-cargo-args = ["-j", "10"]
bin-cargo-args = ["-j", "10"]
