[package]
name = "bamboo-common-backend-actix"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bamboo-common-core = { path = "../../core" }
bamboo-common-backend-dbal = { path = "../dbal" }
bamboo-common-backend-services = { path = "../services" }

actix-web = { workspace = true }
sea-orm = { workspace = true }