[package]
name = "bamboo-common-backend-dbal"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bamboo-common-core = { path = "../../core" }
bamboo-common-backend-notification = { path = "../notification" }

bcrypt = { workspace = true }
chacha20poly1305 = { workspace = true }
chrono = { workspace = true }
date-range = { workspace = true }
getrandom = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
pbkdf2 = { workspace = true }
sea-orm = { workspace = true }
sha2 = { workspace = true }
totp-rs = { workspace = true }
uuid = { workspace = true }