[package]
name = "bamboo-common-backend-mailing"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bamboo-common-backend-dbal = { path = "../dbal" }
bamboo-common-core = { path = "../../core" }

base64 = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
maud = { workspace = true }
sea-orm = { workspace = true }
