[package]
name = "bamboo-common-backend-services"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bamboo-common-core = { path = "../../core" }
bamboo-common-backend-dbal = { path = "../dbal" }

actix-web = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
fast_qr = { workspace = true }
log = { workspace = true }
rust-s3 = { workspace = true }
sea-orm = { workspace = true }
totp-rs = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["rust-s3"]