[package]
name = "bamboo-common-core-entities"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bamboo-common-core-error = { path = "../error" }
bamboo-common-core-macros = { path = "../macros" }
bamboo-common-backend-macros = { path = "../../backend/macros", optional = true }

bcrypt = { workspace = true }
chrono = { workspace = true }
color-art = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
actix-web = { workspace = true, optional = true }
sea-orm = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
strum = { workspace = true, optional = true }
strum_macros = { workspace = true, optional = true }
uuid = { workspace = true }

[features]
backend = ["dep:actix-web", "dep:sea-orm", "dep:serde_json", "dep:bamboo-common-backend-macros"]
frontend = ["dep:strum", "dep:strum_macros"]

[package.metadata.cargo-machete]
ignored = ["actix-web", "strum", "serde_json"]