[package]
name = "bamboo-common-core-queueing"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bamboo-common-core-entities = { path = "../entities" }

async-nats = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
ciborium = { workspace = true, optional = true }
log = { workspace = true, optional = true }
serde = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["async-nats", "bytes", "ciborium"]

[features]
backend = ["async-nats", "bytes", "ciborium", "log"]