[package]
name = "bamboo-common-frontend-api"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bamboo-common-core = { path = "../../core" }

gloo = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
web-sys = { workspace = true }