[package]
name = "bamboo-frontend-pandas-section-final-fantasy"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bamboo-common = { path = "../../../../common", features = ["frontend"] }
bamboo-frontend-pandas-base = { path = "../../base" }

gloo-dialogs = { workspace = true }
log = { workspace = true }
strum = { workspace = true }
stylist = { workspace = true }
yew = { workspace = true }
yew-autoprops = { workspace = true }
yew-cosmo = { workspace = true }
yew_icons = { workspace = true }
yew-hooks = { workspace = true }