[package]
name = "bamboo-frontend-pandas-section-layout"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bamboo-frontend-pandas-base = { path = "../../base" }
bamboo-frontend-pandas-section-authentication = { path = "../authentication" }
bamboo-frontend-pandas-section-bamboo = { path = "../bamboo" }
bamboo-frontend-pandas-section-final-fantasy = { path = "../final-fantasy" }
bamboo-frontend-pandas-section-groves = { path = "../groves" }
bamboo-frontend-pandas-section-legal = { path = "../legal" }
bamboo-frontend-pandas-section-licenses = { path = "../licenses" }
bamboo-frontend-pandas-section-profile = { path = "../my-profile" }
bamboo-frontend-pandas-section-support = { path = "../support" }

bounce = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
yew = { workspace = true }
yew-cosmo = { workspace = true }
yew-hooks = { workspace = true }
yew-router = { workspace = true }